[package]
name = "coordinates"
description = "Simple, no nonsense, library for using two and three dimensonal coordinates in several systems."
license = "MIT OR Apache-2.0"
categories = ["graphics", "mathematics", "science"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
serde = {optional = true, version = "1.0"}
roots = "0.0.7"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3.5"
assert_float_eq = "1.1.3"

[features]
serde =  ["dep:serde"]

#[[bench]]
#name = "coordinates"
#harness = false