[package]
name = "coordinates"
description = "Simple, no nonsense, library for using two and three dimensonal coordinates in several systems."
categories = ["graphics", "mathematics", "science"]
version = "0.3.0"
edition = "2021"
license = "MIT-0 OR 0BSD"
repository = "https://github.com/luke-magnusson/coordinates.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
serde = {optional = true, version = "1.0", features = ["derive"]}
roots = "0.0.7"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"
assert_float_eq = "1.1.3"

[features]
serde =  ["dep:serde"]

#[[bench]]
#name = "coordinates"
#harness = false